Added third line to log.

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Confirm, ready to launch.</p>
+      <p>Watch out for cranes, and make sure you call the FAA before takeoff.</p>
    </body>
 </html>
